ocelot-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: ocelot-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
