product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: productservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
