userauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userauth-service
spec:
  selector:
    app: userauthservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
